--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,11 @@
-# адрес запуска сервера
-HOST = "0.0.0.0"
-# порт запуска сервера
-PORT = "8080"
+# адрес запуска rest сервера
+REST_HOST = "0.0.0.0"
+# порт запуска rest сервера
+REST_PORT = "8080"
+# адрес запуска rest сервера
+GRPC_HOST = "0.0.0.0"
+# порт запуска rest сервера
+GRPC_PORT = "9000"
 # строка подключения к БД
 DATABASE_URL = "host=192.168.1.72 user=postgres password=1 port=5432 dbname=logs sslmode=disable connect_timeout=15000"
 # Максимальное количество сессий БД
